changes made in the html code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Ngwuta Ogechi Enrica | WDD 130</title>
-        <meta name="description" content="describe your home page here using keywords like your name, the course, purpose of the page.">
-        <meta name=" author" content="your name">
+        <meta name="description" content="Ngwuta Ogechi Enrica's BYU idaho WDD130 course Home page">
+        <meta name=" author" content="Ngwuta Ogechi Enrica">
+        
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
@@ -22,7 +24,7 @@
         </main>
         <aside>
             <h2>Ebonyi</h2>
-            <img src="styles/images.jpeg" alt="Ebonyi landscape">
+            <img src="images/Ebonyi.jpg" alt="Ebonyi state">
             <p>Ebonyi is a state in the eastern part of Nigeria. it shares boundry with CROSS river and Benue state, the state is blessed with salt and the land is very rich in agriculture.</p>
         </aside>
         <footer>
