sit plan rafting assignment

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -42,7 +42,7 @@
             <h3>Color Palette</h3>
             Primary Color:
 
-            Name: prprimary-color
+            Name: primary-color
             Hex Code: #4C6B88
             Secondary Color:
 
