changes made on index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Ngwuta Ogechi Enrica's BYU idaho WDD130 course Home page">
         <meta name=" author" content="Ngwuta Ogechi Enrica">
         
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -16,25 +16,29 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting website</a>
                 <a href="wwr/site-plan_rafting.html">Rafting site plan</a>
+                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+                <a href="https://facebook.com" target="_blank">Facebook</a>
             </nav>
         </header>
-        <main>
-            <h1>Ngwuta Ogechi Enrica | WDD130</h1>
-            <img src="images/profile.jpg" alt="hello my name is Ngwuta Ogechi Enrica" width="200">
-            <p>Hello! my name is Ngwuta Ogechi Enrica, am 24 years old,am a student of brigham young university idaho, the best university that has made me to be a better version of myself. i came from a family of six children, am from lagos, Nigeria. i love reading scriptures and praying; i also love playing piano because music always helps me to relax whenever am stressed or angry, there is one more thing people don't know about me and that is that the most precious people in my life are God and my mom.</p>
-            <ul class="box">
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" target="_blank">Philadelphia Pennsylvania Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
-                <li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
-                <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
-            </ul>
-        </main>
-        <aside class="box">
-            <h2>Ebonyi</h2>
-            <img src="images/Ebonyi.jpg" alt="Ebonyi state">
-            <p>Ebonyi is a state in the eastern part of Nigeria. it shares boundry with CROSS river and Benue state, the state is blessed with salt and the land is very rich in agriculture.</p>
-        </aside>
+        <div class="grid">
+            <main>
+                <h1>Ngwuta Ogechi Enrica | WDD130</h1>
+                <hr>
+                <img src="images/profile.jpg" alt="hello my name is Ngwuta Ogechi Enrica" width="200">
+                <p>Hello! my name is Ngwuta Ogechi Enrica, am 24 years old,am a student of brigham young university idaho, the best university that has made me to be a better version of myself. i came from a family of six children, am from lagos, Nigeria. i love reading scriptures and praying; i also love playing piano because music always helps me to relax whenever am stressed or angry, there is one more thing people don't know about me and that is that the most precious people in my life are God and my mom.</p>
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" target="_blank">Philadelphia Pennsylvania Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
+                   
+                </ul>
+            </main>
+            <aside class="box">
+                <h2>Ebonyi</h2>
+                <img src="images/Ebonyi.jpg" alt="Ebonyi state">
+                <p>Ebonyi is a state in the eastern part of Nigeria. it shares boundry with CROSS river and Benue state, the state is blessed with salt and the land is very rich in agriculture.</p>
+            </aside>
+        </div>
         <footer>
             <p>&copy;2024 🌲 Ngwuta Ogechi Enrica 🌲 lagos, Nigeria</p>
         </footer> 
