--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/wwr/rafting.css">
+  <link rel="stylesheet" href="styles/rafting.css">
   <title>Rafting Company - About Us</title>
 </head>
 <body>
@@ -20,14 +20,14 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-
+  <div class="grid">
   <main>
     <div class="hero">
       <!-- Hero Image -->
       <img src="images/hero-image.jpg" alt="Rafting Adventure">
 
       <!-- Hero Content -->
-      <h1>whitewater thrills</h1>
+      <h1>Whitewater Thrills</h1>
       <article>
         <!-- Image of Happy Client/Employee -->
         <h4>happy-clients</h4>
@@ -49,13 +49,18 @@
       <h2>Adventure Awaits You!</h2>
       <!-- White Water Rafting Images -->
       <img src="images/rafting1.jpg" alt="Rafting Adventure 1">
+      <p>Peaceful rapids</p>
       <img src="images/rafting2.jpg" alt="Rafting Adventure 2">
+      <p>Colorado River</p>
       <img src="images/rafting3.jpg" alt="Rafting Adventure 3">
+      <p>Bear River</p>
       <img src="images/rafting4.jpg" alt="Rafting Adventure 4">
+      <p>Smokey River</p>
       <img src="images/rafting5.jpg" alt="Rafting Adventure 5">
+      <p>Boise River</p>
     </section>
   </main>
-
+  </div>
   <footer>
     <!-- Copyright Information -->
     <p>&copy; 2023 whitewater thrills | Created by Ngwuta Ogechi Enrica</p>
