changes made in about.html 2

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,7 +10,7 @@
 
   <header>
     <!-- Logo -->
-    <img src="images/logo.png" alt="Rafting Company Logo">
+    <img src="images/Logo.png" alt="Rafting Company Logo">
 
     <!-- Navigation -->
     <nav>
