changes made in abouut.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,13 +11,14 @@
   <header>
     <!-- Logo -->
     <img src="images/Logo.png" alt="Rafting Company Logo">
-
     <!-- Navigation -->
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="trips.html">Trips</a>
-      <a href="contact.html">Contact</a>
+    <ul class="horizontal_line_inline">
+      <li></li><a href="index.html">Home</a></li>
+      <li></li><a href="about.html">About Us</a></li>
+      <li></li><a href="trips.html">Trips</a></li>
+      </li><a href="contact.html">Contact</a></li>
+    </ul>
     </nav>
   </header>
   <div class="grid">
@@ -60,11 +61,10 @@
       <p>Boise River</p>
     </section>
   </main>
-  </div>
   <footer>
     <!-- Copyright Information -->
     <p>&copy; 2023 whitewater thrills | Created by Ngwuta Ogechi Enrica</p>
-
+    
     <!-- Social Media Icons -->
     <a href="#" target="_blank"><img src="images/facebook-icon.png" alt="Facebook"></a>
     <a href="#" target="_blank"><img src="images/twitter-icon.png" alt="Twitter"></a>
