changes made in about.html 3

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,11 +13,11 @@
     <img src="images/Logo.png" alt="Rafting Company Logo">
     <!-- Navigation -->
     <nav>
-    <ul class="horizontal_line_inline">
+    <ul>
       <li></li><a href="index.html">Home</a></li>
       <li></li><a href="about.html">About Us</a></li>
       <li></li><a href="trips.html">Trips</a></li>
-      </li><a href="contact.html">Contact</a></li>
+      <li></li><a href="contact.html">Contact</a></li>
     </ul>
     </nav>
   </header>
@@ -49,16 +49,26 @@
     <section>
       <h2>Adventure Awaits You!</h2>
       <!-- White Water Rafting Images -->
-      <img src="images/rafting1.jpg" alt="Rafting Adventure 1">
-      <p>Peaceful rapids</p>
-      <img src="images/rafting2.jpg" alt="Rafting Adventure 2">
-      <p>Colorado River</p>
-      <img src="images/rafting3.jpg" alt="Rafting Adventure 3">
-      <p>Bear River</p>
-      <img src="images/rafting4.jpg" alt="Rafting Adventure 4">
-      <p>Smokey River</p>
-      <img src="images/rafting5.jpg" alt="Rafting Adventure 5">
-      <p>Boise River</p>
+      <figure>
+        <img src="images/rafting1.jpg" alt="Rafting Adventure 1">
+        <figcaption>Peaceful rapids</figcaption>
+      </figure>
+      <figure>  
+        <img src="images/rafting2.jpg" alt="Rafting Adventure 2">
+        <figcaption>Colorado River</figcaption>
+      </figure>
+      <figure>
+        <img src="images/rafting3.jpg" alt="Rafting Adventure 3">
+        <figcaption>Bear River</figcaption>
+      </figure>
+      <figure>  
+        <img src="images/rafting4.jpg" alt="Rafting Adventure 4">
+        <figcaption>Smokey River</figcaption>
+      </figure>
+      <figure> 
+        <img src="images/rafting5.jpg" alt="Rafting Adventure 5">
+        <figcaption>Boise River</figcaption>
+      </figure>
     </section>
   </main>
   <footer>
