changes made in quize

--- a/wwr/styles/quiz.html
+++ b/wwr/styles/quiz.html
@@ -20,7 +20,7 @@
             <option value="" selected disabled></option>
             <option value="option1">1. # page width Limit</option>
             <option value="option2">2. /* Page Width Limit */</option>
-            <option value="option3">3. #& page width Limit</option>
+            <option value="option3">3. # page width Limit &</option>
         </select>
         <label for="q4">4. which is a botton margin given this declaration?:</label>
         <h5>margin: 10px 5px 15px;</h5>
