--- a/wwr/styles/quiz.html
+++ b/wwr/styles/quiz.html
@@ -11,7 +11,7 @@
     <form action="submit_quiz.php" method="post">
         
         
-        <label for="q1">1. what does the acronym CSS stand for?:</label>
+        <label for="q1">1. what does acronym CSS stand for?:</label>
         <input type="text" id="q1" name="q1" required>
         <label for="q2">2. How are id and class atributes selected in CSS? :</label>
         <textarea id="q2" name="q2" rows="4" required></textarea>
