--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -24,7 +24,7 @@
     <main>
       <!-- Call to Action -->
       <section>
-        <h2>Explore Our Exciting Water Trips</h2>
+        <h>Explore Our Exciting Water Trips</h2>
         <p>Ready for an adventure? Contact us to plan your next rafting experience!</p>
       </section>
 
