--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/rafting.css">
+  <link rel="stylesheet" href="rafting.css">
   <title>Rafting Adventures - Exciting Water Trips</title>
   <meta name="description" content="Explore thrilling water trips with Rafting Adventures. Choose from a variety of exciting rafting experiences. Contact us to plan your next adventure!">
 </head>
@@ -13,10 +13,11 @@
     <img src="images/Logo.png" alt="Rafting Company Logo">
     <!-- Navigation -->
     <nav>
+      
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Us</a></li>
       <li><a href="trips.html">Trips</a></li>
-      <a href="contact.html" class="cta-button">Contact Us</a>
+      <li><a href="contact.html">Contact Us</a></li>
     </nav>
   </header>
 
@@ -91,6 +92,7 @@
       <a href="#" target="_blank"><img src="images/facebook-icon.png" alt="Facebook"></a>
       <a href="#" target="_blank"><img src="images/twitter-icon.png" alt="Twitter"></a>
       <a href="#" target="_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
+      <a href="https://app.moqups.com/qrsflc7ymxYG90eDJhrvQnH8w9iKvC60/edit/page/ad64222d5" target="_blank">Enrica's project-page</a> 
     </footer>
   </div>
 </body>
